k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-backend-dep
  namespace: url-short
  labels:
    project: url-shortener
    app: url-backend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-backend
  template:
    metadata:
      name: url-backend-pod
      labels:
        app: url-backend
        project: url-shortener
    spec:
      containers:
      - name: url-backend-con
        image: ahmedkabil/url-backend:1.31
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: url-backend-srv
  namespace: url-short
  labels:
    project: url-shortener
spec:
  selector:
    app: url-backend
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
