k8s/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: url-mongodb-sfs
  namespace: url-short
  labels:
    app: url-mongodb
    project: url-shortener
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 3
  serviceName: url-mongodb-headless-srv
  selector:
    matchLabels:
      app: url-mongodb
  volumeClaimTemplates:
    - metadata:
        name: mongo-vol
      spec:
        storageClassName: local-path
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
  template:
    metadata:
      labels:
        app: url-mongodb
        project: url-shortener
    spec:
      containers:
      - name: url-mongodb-con
        image: mongo:6.0
        volumeMounts:
          - name: mongo-vol
            mountPath: /data/db
        ports:
        - containerPort: 27017
        args: ["--replSet", "rs0", "--bind_ip_all"]
        # env:
        # - name: MONGO_INITDB_ROOT_USERNAME
        #   valueFrom: 
        #     secretKeyRef:
        #       name: url-secret
        #       key: db_user
        # - name: MONGO_INITDB_ROOT_PASSWORD
        #   valueFrom: 
        #     secretKeyRef:
        #       name: url-secret
        #       key: db_pass

---
apiVersion: v1
kind: Service
metadata:
  name: url-mongodb-headless-srv
  namespace: url-short
  labels:
    project: url-shortener
spec:
  clusterIP: None
  selector:
    app: url-mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
