k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-short
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - url.ahmedkabil.me
      secretName: url-tls-secret
  rules:
  - host: url.ahmedkabil.me
    http:
      paths:

      # API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: url-backend-srv
            port:
              number: 7000

      # Static frontend assets (optional if needed)
      - path: /(.*\.(css|js|png|jpg|ico|svg))$
        pathType: ImplementationSpecific
        backend:
          service:
            name: url-frontend-srv
            port:
              number: 80

      # Short URL (IMPORTANT)
      - path: /[A-Za-z0-9_-]{6}
        pathType: ImplementationSpecific
        backend:
          service:
            name: url-backend-srv
            port:
              number: 7000

      # Frontend fallback
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-frontend-srv
            port:
              number: 80
